Revision history for DBIx::Class

        - When adding relationships, it will throw an exception if you get the
          foreign and self parts the wrong way round in the condition
        - ResultSetColumn::func() now returns all results if called in list
          context; this makes things like func('DISTINCT') work as expected

0.08007 2007-09-04 19:36:00
        - patch for Oracle datetime inflation (abram@arin.net)
        - added on_disconnect_do
        - on_connect_do and on_disconnect_do take coderefs and arrayrefs

0.08006 2007-08-12 15:12:00
        - Move to using Class::C3::Componentised
        - Remove warn statement from DBIx::Class::Row

0.08005 2007-08-06 
        - add timestamp fix re rt.cpan 26978 - no test yet but change
          clearly should cause no regressions
        - provide alias for related_resultset via local() so it's set
          correctly at resultset construction time (fixes RestrictWithObject)
        - fixes bind params in debug statements
          (original test from abraxxa)
        - fixed storage->connected fork bug
          (test and fix from Radu Greab)
        - add 1; to AccessorGroup.pm for stuff that still uses it
        - refactor Statistics to create debugging filehandle to fix bug with
          closed STDERR, update docs and modify Versioned to use Statistics
          (original fix from diz)

0.08004 2007-08-06 19:00:00
        - fix storage connect code to not trigger bug via auto-viv 
          (test from aherzog)
        - fixup cursor_class to be an 'inherited' attr for per-package defaults
        - add default_resultset_attributes entry to Schema
        - optimisation in DBI::Cursor to check software_limit before falling
          back to base Cursor->all
        - fix bug with create_multi not inserting non-storage objects
          (test and fix from davinchi)
        - DBIx::Class::AccessorGroup made empty subclass of
          Class::Accessor::Grouped